--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <div id="clock" ></div>
    </div>
 
+   <footer class="footer">
+        <div class="copy">
+            <span>&copy; Develop by</span> <h1>CODEWITHSAIDUL</h1>
+        </div>
+   </footer>
+
 
    <!--========= Jquery Link ========-->
    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
