--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
         <div id="clock" ></div>
    </div>
 
+  
    <footer class="footer">
-        <div class="copy">
-            <span>&copy; Develop by</span> <h1>CODEWITHSAIDUL</h1>
-        </div>
+       <h2>Developed by || CodeWithSaidul</h2>
    </footer>
-
 
    <!--========= Jquery Link ========-->
    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
